Cari Gambar Done

--- a/app/src/main/res/layout/activity_cari_gambar.xml
+++ b/app/src/main/res/layout/activity_cari_gambar.xml
@@ -17,11 +17,11 @@
 
     <EditText
         android:id="@+id/edtUrlGambar"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:layout_marginTop="20dp"
-        android:ems="15"
         android:hint="Masukkan URL gambar" />
 
     <Button
@@ -35,8 +35,11 @@
 
     <ImageView
         android:id="@+id/gbrUrl"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginBottom="30dp"
         android:layout_marginTop="50dp"
         android:layout_gravity="center_horizontal"
         />
